--- a/esmeCalendar/app/src/main/res/layout/event_item.xml
+++ b/esmeCalendar/app/src/main/res/layout/event_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/cardview"
         android:elevation="10dp"
@@ -90,6 +90,8 @@
                       android:text="TD"/>
 
         </LinearLayout>
+
+
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
