--- a/esmeCalendar/app/src/main/res/layout/activity_main.xml
+++ b/esmeCalendar/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bois"
-    tools:context=".MainActivity">
-
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity">
 
     <android.support.v7.widget.RecyclerView
 
+            android:id="@+id/rv_event_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-        android:id="@+id/rv_event_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <ProgressBar
-        android:id="@+id/progress"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="28dp"
-        android:visibility="invisible"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+            <ProgressBar android:layout_width="match_parent"
+                         android:layout_height="match_parent"
+                         android:id="@+id/progress"
+                         android:visibility="invisible"/>
 
     <Button
         android:id="@+id/button"
