--- a/esmeCalendar/app/src/main/res/layout/event_item.xml
+++ b/esmeCalendar/app/src/main/res/layout/event_item.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/cardview"
         android:elevation="10dp"
         android:layout_margin="8dp"
-        app:cardBackgroundColor="@color/colorAccent"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+        <ImageView android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   app:layout_constraintTop_toTopOf="parent"
+                   app:layout_constraintRight_toRightOf="parent"
+                   app:layout_constraintLeft_toLeftOf="parent"
+                   android:id="@+id/image"
+                    />
 
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
@@ -69,16 +76,7 @@
                           android:textSize="30dp"
 
                           android:text="Debadier"/>
-
-
-
-
-
             </LinearLayout>
-
-
-
-
 
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
@@ -90,8 +88,6 @@
                       android:text="TD"/>
 
         </LinearLayout>
-
-
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v7.widget.CardView>
